Added colors to color typeahead.

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -226,6 +226,7 @@
       id="43"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -233,6 +234,7 @@
       id="44"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -240,6 +242,7 @@
       id="45"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -247,6 +250,7 @@
       id="46"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -254,6 +258,7 @@
       id="47"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
   </ng-template>
@@ -269,6 +274,7 @@
       id="51"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -276,6 +282,7 @@
       id="52"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="1"
     ></app-question>
     <app-question
@@ -283,6 +290,7 @@
       id="53"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="1"
     ></app-question>
     <app-question
@@ -290,6 +298,7 @@
       id="54"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -297,6 +306,7 @@
       id="55"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="1"
     ></app-question>
     <app-question
@@ -304,6 +314,7 @@
       id="61"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -311,6 +322,7 @@
       id="62"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -318,6 +330,7 @@
       id="63"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -325,6 +338,7 @@
       id="64"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
     <app-question
@@ -332,6 +346,7 @@
       id="65"
       answerType="typeahead"
       [answers]="answersService.colors()"
+      [isColors]="true"
       [countOfAnswers]="2"
     ></app-question>
   </ng-template>
