cleaned up the code, added some helpful hinds when an answer is full

--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -30,7 +30,13 @@
   (click)="click$.next($event.target.value)"
   #instance="ngbTypeahead"
   [disabled]="!isEnabled()"
-  [placeholder]="isQuestionClosed() ? '' : randomPlaceholder"
+  [placeholder]="
+    isQuestionClosed()
+      ? ''
+      : isEnabled()
+      ? randomPlaceholder
+      : 'Settle down, ... or remove an answer'
+  "
   [resultTemplate]="isColors ? colorResultTemplate : null"
 />
 
