--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -27,8 +27,23 @@
             "
           />
           <div class="form-group">
-            <label for="file">Upload File</label>
-            TODO
+            <div>
+              <button
+                type="button"
+                class="btn btn-outline-dark"
+                (click)="fileInput.click()"
+              >
+                Upload a new profile picture
+              </button>
+              <input
+                hidden
+                (change)="onFileSelected($event)"
+                #fileInput
+                type="file"
+                id="file"
+                accept="image/*"
+              />
+            </div>
           </div>
         </div>
       </div>
