--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -10,6 +10,16 @@
   }
 }
 
+.chat-name {
+  margin-left: 8px;
+}
+
+app-image {
+  margin-bottom: 4px;
+  height: 30px;
+  display: inline-block;
+}
+
 .chat-values {
   min-height: 100px;
   max-height: 300px;
