Fixed pooling problem with updateQuestion.
Added Disable/Enable all buttons for admin.

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -9,7 +9,7 @@
           [target]="'/api/user/profile/' + chats[chatId].user.id"
           imgStyle="width: 30px; border-radius: 4px;"
         ></app-image>
-        <b class="chat-name"
+        <b class="chat-name" [class.is-admin]="chats[chatId].user.isAdmin"
           >{{ chats[chatId].user.name }}
           <small class="text-mutes" *ngIf="chats[chatId].user.family"
             >({{ chats[chatId].user.family.name }})</small
