--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -16,6 +16,14 @@
   To switch users, click the organ pipes in the top right.
 </p>
 
+<ng-template [ngIf]="serverMessages?.length">
+  <p *ngFor="let serverMessage of serverMessages; let index = index">
+    <ngb-alert type="warning" [dismissible]="false"
+      ><div [innerHTML]="serverMessage"></div
+    ></ngb-alert>
+  </p>
+</ng-template>
+
 <div *ngIf="authService.getCurrentUser().isAdmin" class="admin-only">
   <b>Admin Only</b>
   <button class="btn btn-outline-dark" (click)="answerBusService.disableAll()">
