--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -13,7 +13,8 @@
   sessions.
 </p>
 <p>
-  To switch users, click the organ pipes in the top right.
+  To switch users, change your name or your picture; click the organ pipes in
+  the top right.
 </p>
 
 <ng-template [ngIf]="serverMessages?.length">
