--- a/client/src/app/scoreboard/scoreboard.component.html
+++ b/client/src/app/scoreboard/scoreboard.component.html
@@ -1,22 +1,30 @@
-<h3 *ngIf="userCount">People playing: {{ userCount }}</h3>
-
-<ng-template [ngIf]="usernames">
-  <div *ngFor="let username of usernames">
-    {{ username }}
-  </div>
-</ng-template>
-
-<div class="row">
-  <div class="col-12 col-md-6">
-    <h1 *ngIf="userScores.length">Top Users</h1>
-    <div *ngFor="let score of userScores">
-      <b>{{ score.name }}</b> {{ score.value }}
-    </div>
-  </div>
-  <div class="col-12 col-md-6">
-    <h1 *ngIf="familyScores.length">Top Families</h1>
-    <div *ngFor="let score of familyScores">
-      <b>{{ score.name }}</b> {{ score.value }}
-    </div>
-  </div>
-</div>
+<h3>Top Players</h3>
+<h4 *ngIf="!scores?.length">No scores yet.</h4>
+<table class="table table-striped">
+  <tbody>
+    <tr *ngFor="let score of scores" [class.me]="isMe(score)">
+      <th scope="row">{{ score.score }}</th>
+      <td>
+        <app-image
+          *ngIf="getUserOrFamily(score.userOrFamilyId)?.hasProfileImage"
+          [target]="'/api/user/profile/' + score.userOrFamilyId"
+          imgStyle="width: 30px; border-radius: 4px;"
+        ></app-image>
+        <span [class.family]="getUserOrFamily(score.userOrFamilyId)?.isFamily">
+          {{ getUserOrFamily(score.userOrFamilyId)?.name }}
+        </span>
+        <span
+          *ngIf="!getUserOrFamily(score.userOrFamilyId)?.isFamily"
+          class="family"
+          >({{ getUserOrFamily(score.userOrFamilyId)?.family?.name }})</span
+        >
+      </td>
+      <td>
+        {{
+          getUserOrFamily(score.userOrFamilyId)?.isFamily ? "Family" : "Player"
+        }}
+      </td>
+    </tr>
+  </tbody>
+</table>
+<h3 *ngIf="userCount">Total Players: {{ userCount }}</h3>
