Quick style fix.

--- a/client/src/app/question/question.component.html
+++ b/client/src/app/question/question.component.html
@@ -13,7 +13,7 @@
   >&nbsp;<br class="d-md-none" />
   <small>Maximum number of guesses: {{ countOfAnswers }}</small>
   <ng-template [ngIf]="isQuestionClosed()">
-    &nbsp;<br class="d-md-none" />
+    &nbsp;<br />
     <small>This question is closed.</small>
     <br />
     <small
