--- a/client/src/app/game/game.component.scss
+++ b/client/src/app/game/game.component.scss
@@ -13,3 +13,28 @@
     margin-left: 8px;
   }
 }
+
+.share-facebook,
+.share-twitter,
+.share-native {
+  margin-right: 5px;
+  padding: 5px;
+  min-width: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 6px;
+}
+
+.share-facebook {
+  color: white;
+  background-color: #3b5998;
+}
+
+.share-twitter {
+  color: white;
+  background-color: #00acee;
+}
+
+.share-native {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
