--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -6,6 +6,7 @@ $fa-font-path: "../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
 @import "../node_modules/@fortawesome/fontawesome-free/scss/regular.scss";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/brands.scss";
 
 @import url("https://fonts.googleapis.com/css?family=Great+Vibes&display=swap");
 
